update citation info

--- a/python_notebooks/ssdgp_matern_32_ekfs_tutorial.ipynb
+++ b/python_notebooks/ssdgp_matern_32_ekfs_tutorial.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d736c885",
    "metadata": {},
    "source": [
     "# 1. Problem formulation\n",
@@ -75,6 +76,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c7f7a10",
    "metadata": {},
    "source": [
     "# 3. Model implementation\n",
@@ -87,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "48502cce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +110,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6b0d261",
    "metadata": {},
    "source": [
     "Let us write down the SDEs. In the below, functions `drift()` and `dispersion()` correspond to the drift and dispersion parts of the SDE system in Equation 2."
@@ -115,6 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d1a948a7",
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b692f711",
    "metadata": {},
    "source": [
     "Wait a sec, why is the initial mean of $U_3(t_0)$ deliberately set to -2? No worry, we will explain this around the end of the notebook."
@@ -171,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "082275fc",
    "metadata": {},
    "source": [
     "# 4. Discretisation\n",
@@ -186,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a064311e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +210,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3d62da5",
    "metadata": {},
    "source": [
     "# 5. Samples from SS-DGP\n",
@@ -211,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e64d12be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +244,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39859933",
    "metadata": {},
    "source": [
     "Let's plot three samples from the SDE. From the figures below, it looks like the process $U$ exhibits strong non-stationary behavious driven by the changing length scale and magnitude parameters. You could keep ctrl+entering the plotting code block to generate and examine more samples."
@@ -242,6 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "8f8a6b6d",
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +301,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc95ba14",
    "metadata": {},
    "source": [
     "# 6. Regression on a toymodel\n",
@@ -307,6 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "bddfb649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +339,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11f5293b",
    "metadata": {},
    "source": [
     "The signal and measurement look like this:"
@@ -333,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "37489444",
    "metadata": {},
    "outputs": [
     {
@@ -366,6 +382,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae3470ab",
    "metadata": {},
    "source": [
     "Okay, now we can try to solve the SS-DGP regression problem with the data above. \n",
@@ -376,6 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "21be053f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "345cdfbe",
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +432,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c7212f5",
    "metadata": {},
    "source": [
     "Now let us plot the regression fit."
@@ -421,6 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "0c8fa102",
    "metadata": {},
    "outputs": [
     {
@@ -481,6 +502,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e6ad7e6",
    "metadata": {},
    "source": [
     "From the figure above, we find that the SS-DGP fit look fairly okay, and that the confidence interval of $U$ is also pretty reasonable. Moreover, the learnt length scale driving parameter $U_2$ is able to change as the frequency of the signal changes. This is the behavious that we intend to have!\n",
@@ -495,6 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "202e8059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,6 +530,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba697092",
    "metadata": {},
    "source": [
     "Let's compile and run the EKFS again, and plot the new results with $U_3(t)$ fixed at 1.5 for all $t$."
@@ -515,6 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "f130b403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,6 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "0c4c54f6",
    "metadata": {
     "scrolled": false
    },
@@ -592,6 +618,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecc8268c",
    "metadata": {},
    "source": [
     "Yep, that's it. The results look much better, right? You can also check that `g3(U_3(t))` should also stay at set 1.5."
@@ -599,6 +626,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a99d51c",
    "metadata": {},
    "source": [
     "Exercises: \n",
@@ -612,6 +640,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "416775ee",
    "metadata": {},
    "source": [
     "----------------------------------------------\n",
@@ -622,6 +651,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cba739c7",
    "metadata": {},
    "source": [
     "How about comparing this Matern SS-DGP against other GPs, such as conventional stationary GPs? To do so, we are going to use `gpflow` which require you to install `tensorflow` and `gpflow`."
@@ -630,6 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d49df8b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "3273873d",
    "metadata": {},
    "outputs": [
     {
@@ -675,6 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "fb21b102",
    "metadata": {},
    "outputs": [
     {
@@ -722,6 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "deccef54",
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +797,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a85210f",
    "metadata": {},
    "source": [
     "We can see that these stationary GPs somehow over-adpat the high-frequency section (please check their learnt parameters and you will see) of the signal. This makes them poorly fit the low-frequency section (i.e., $t\\leq 0.3$ s) of the signal.\n",
@@ -773,6 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "d18306ac",
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +839,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16120b2c",
    "metadata": {},
    "source": [
     "# Bibliography\n",
@@ -811,12 +848,13 @@
     "\n",
     "Zheng Zhao. State-space deep Gaussian processes. PhD thesis, Aalto University, 2021.\n",
     "\n",
-    "Zheng Zhao, Muhammad Emzir, and Simo Särkkä. Deep state-space Gaussian processes. arXiv:2008.04733. 2020."
+    "Zheng Zhao, Muhammad Emzir, and Simo Särkkä. Deep state-space Gaussian processes. Statistics and Computing, 2021, in press."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b985e22",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -838,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
