update bib info

--- a/python_notebooks/ssdgp_matern_32_ekfs_tutorial.ipynb
+++ b/python_notebooks/ssdgp_matern_32_ekfs_tutorial.ipynb
@@ -848,7 +848,7 @@
     "\n",
     "Zheng Zhao. State-space deep Gaussian processes. PhD thesis, Aalto University, 2021.\n",
     "\n",
-    "Zheng Zhao, Muhammad Emzir, and Simo Särkkä. Deep state-space Gaussian processes. Statistics and Computing, 2021, in press."
+    "Zheng Zhao, Muhammad Emzir, and Simo Särkkä. Deep state-space Gaussian processes. Statistics and Computing, 31(6):75, 2021."
    ]
   },
   {
